# Ai_Security

./: .env.example  .env.production.example  .gitignore  .risk-core-test-results.xml  BAO_CAO_KIEM_TRA_MODEL.md  CoreGuide.md  Design_UI.md  Dockerfile.ai  Dockerfile.backend  Dockerfile.backend.code.dockerfile  Dockerfile.backend.dockerignore  Dockerfile.web  HUONG_DAN_KIEM_TRA.md  IMPLEMENTATION_SUMMARY.md  MODELS_README.md  MODEL_VALIDATION_REPORT.md  README.md  THIRD_PARTY_NOTICES.md  TONG_KET.md  TRAINING_SUMMARY.md  UI_wireframe.md  ai-development-guide.md  architecture-review.md  c4-model.md  dataset-plan.md.md  demo-script.md.md  demo_all_models.py  design.md  designes.md  docker-compose.ai.yml  docker-compose.production.yml  docker-compose.urlvet.yml  docker-compose.yml  docker-compose.yml.code.yaml  download-ai-security.bat  download-ai-security.ps1  engineering-backlog.md  gpu-budget-breakdown.md.md  improve_url_model.py  landingpage.md.md  (+16 more)
.mtui/: mtui.db  policy-session-baseline.json
.tunnel-client/: prewise-local.yaml
ai/: __init__.py
ai_server/: __init__.py  launcher.py  smoke_test.py
backend/: __init__.py  config.py  db.py  dependencies.py  main.py  middleware.py  models.py  security_utils.py
data/: brand_visual_hashes.json  build_corpora.py  download_dataset.py  message_rule_corpus.json  phishing_text_dataset.meta.json  prompt_injection_dataset.meta.json  url_dataset.meta.json  url_dataset_dataset.meta.json  url_rule_corpus.json
docs/: ADMIN_PANEL.md  HUONG_DAN_ADMIN.md  README.md  agent-shield-integration.md  authentication.md  browser-sandbox.md  completion-audit.md  context-adapters.md  document-map.md  exe-quick-scan.md  external-integrations.md  five-layer-threat-detection.md  judge-demo.md  llm-server.md  message-threat-detection.md  portable-local-deployment.md  postgresql-production-design.md  release-packaging.md  server-models.md  url-phishing-detection.md  url-sandbox.md  (+1 more)
(+3287 files in other folders)
