[project]
name = "ai-security-armor"
version = "0.1.0"
description = "AI Security Armor for Agentic Workflows — Robust Risk Core + MCP Security Armor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.30",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.0",
    "Pillow>=10.3.0",
    "onnxruntime>=1.17.0",
    "transformers>=4.48.0,<6",
    "sentencepiece>=0.2.0",
    "scikit-learn>=1.4.0",
    "skl2onnx>=1.16.0",
]

[project.optional-dependencies]
# Extra ML deps for URL training and model explanation.
ml = [
    "onnxscript>=0.1.0",
    "lightgbm>=4.3.0",
    "tldextract>=5.1.0",
    "shap>=0.45.0",
]
train = [
    "transformers>=4.48.0,<6",
    "torch>=2.2.0",
    "datasets>=2.18.0,<3",
    "accelerate>=0.28.0",
    "huggingface_hub>=0.21.2",
    "onnx>=1.15.0",
    "onnxscript>=0.1.0",
    "sentencepiece>=0.2.0",
    "nltk>=3.8.0",
    "onnxmltools>=1.12.0",
    "skl2onnx>=1.16.0",
    "textattack>=0.3.10",
    "mlflow>=2.11.0",
]
llm = ["ollama>=0.1.7"]
mcp = ["mcp>=1.0.0"]
browser = ["playwright>=1.48.0"]
postgres = [
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# FastAPI dependency injection intentionally uses Depends(...) as defaults.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "ai/training/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.setuptools]
packages = ["shared", "backend", "ai", "security"]
